--- a/historical.html
+++ b/historical.html
@@ -121,7 +121,7 @@
           year: r.Year,
           team: r.Team,
           gp: +r.GP,
-          min: +r.Min || +r.MIN || +r[' Minutes'] || +r['MIN'] || 0,
+          min: +r['MIN'],
           fga: +r.FGA,
           fgm: +r.FGM,
           fga2: +r['2FGA'],
