--- a/historical.html
+++ b/historical.html
@@ -121,7 +121,7 @@
           year: r.Year,
           team: r.Team,
           gp: +r.GP,
-          min: +r['MIN'],
+          min: +r.MIN,
           fga: +r.FGA,
           fgm: +r.FGM,
           fga2: +r['2FGA'],
