--- a/historical.html
+++ b/historical.html
@@ -44,21 +44,25 @@
 
     <!-- Filter bar -->
     <div class="filter-bar">
-      <label for="competitionSelect">Competition:</label>
-      <select id="competitionSelect">
-        <option value="All">All</option>
-        <option value="U15 (Boys)">National U15 (Boys)</option>
-        <option value="U17 (Boys)">National U17 (Boys)</option>
-      </select>
+      <div calss="filter-field">
+        <label for="competitionSelect">Competition:</label>
+        <select id="competitionSelect">
+          <option value="All">All</option>
+          <option value="U15 (Boys)">National U15 (Boys)</option>
+          <option value="U17 (Boys)">National U17 (Boys)</option>
+        </select>
+      </div>
 
-      <label for="yearSelect">Year:</label>
-      <select id="yearSelect">
-        <option value="All">All</option>
-        <option value="2024">2024</option>
-        <option value="2025">2025</option>
-      </select>
+      <div calss="filter-field">
+        <label for="yearSelect">Year:</label>
+        <select id="yearSelect">
+          <option value="All">All</option>
+          <option value="2024">2024</option>
+          <option value="2025">2025</option>
+        </select>
+      </div>
 
-      <div class="player-search">
+      <div class="fliter-field">
         <label for="playerInput">Player:</label>
         <input type="text" id="playerInput" placeholder="Enter player name" />
       </div>
