--- a/calculator.html
+++ b/calculator.html
@@ -72,7 +72,7 @@
         <div class="chip" data-value="bs">Blocks</div>
         <div class="chip" data-value="pf">Personal Fouls</div>
         <div class="chip" data-value="fd">Fouls Drawn</div>
-        <div class="chip" data-value="pts">PTS</div>
+        <div class="chip" data-value="pts">Total Points</div>
       </div>
     </div>
 
