--- a/historical.html
+++ b/historical.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Historical Stats</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="historical_style.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
