--- a/historical.html
+++ b/historical.html
@@ -90,10 +90,9 @@
         <thead>
           <tr>
             <th>Player</th><th>Competition</th><th>Year</th><th>Team</th>
-            <th>GP</th><th>Min</th><th>FGA</th><th>FGM</th>
-            <th>2FGA</th><th>2FGM</th><th>3FGA</th><th>3FGM</th>
-            <th>FTA</th><th>FTM</th><th>OR</th><th>DR</th><th>TR</th>
-            <th>AS</th><th>TO</th><th>ST</th><th>BS</th><th>PF</th><th>FD</th><th>PTS</th>
+            <th>GP</th><th>Min</th><th>FG</th><th>2FG</th><th>3FG</th><th>FT</th>
+            <th>OR</th><th>DR</th><th>TR</th><th>AS</th>
+            <th>TO</th><th>ST</th><th>BS</th><th>PF</th><th>FD</th><th>PTS</th>
           </tr>
         </thead>
         <tbody></tbody>
