--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
-  <link rel="import" href="headings.html">  
+    <!-- nav bar -->
+  <div class="top-nav">
+    <div class="left-section">
+      <a href="https://www.maba.com.my" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
+      <span>FIBA</span>
+    </div>
+    <div class="right-section">
+      <span>Listen</span>
+      <span>Search 🔍</span>
+      <span>👤</span>
+    </div>
+  </div>
+
+  <!-- Sub-nav with dropdown -->
+  <div class="sub-nav">
+    <a href="index.html">Home</a>
+    <a href="historical.html">Historical Stats</a>
+    <a href="calculator.html">Advanced Calculator</a>
+    <div class="dropdown">
+      <a href="#" class="dropbtn">Competition ▼</a>
+      <div class="dropdown-content">
+        <a href="#">MABA Cup</a>
+        <a href="#">National U17</a>
+        <a href="#">National U15</a>
+        <a href="#">Agong Cup</a>
+      </div>
+    </div>
+  </div>
+
   <div class="container">
     <h1>🏀 Basketball Stats Dashboard</h1>
     <p>Welcome! Explore basketball statistics and data-driven insights.</p>
