--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
-    <!-- nav bar -->
+  <!-- nav bar -->
   <div class="top-nav">
     <div class="left-section">
+      <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <a href="https://www.maba.com.my" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
       <span>FIBA</span>
     </div>
