--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="top-nav">
     <div class="left-section">
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
-      <a href="https://www.maba.com.my" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
+      <a href="https://maba.web.geniussports.com/" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
       <span>FIBA</span>
     </div>
     <div class="right-section">
