--- a/calculator.html
+++ b/calculator.html
@@ -11,7 +11,7 @@
   <!-- nav bar -->
   <div class="top-nav">
     <div class="left-section">
-      <a href="https://www.maba.com.my" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
+      <a href="https://maba.web.geniussports.com/" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
       <span>FIBA</span>
     </div>
     <div class="right-section">
