--- a/historical.html
+++ b/historical.html
@@ -50,6 +50,8 @@
           <option value="All">All</option>
           <option value="U15 (Boys)">National U15 (Boys)</option>
           <option value="U17 (Boys)">National U17 (Boys)</option>
+          <option value="U17 (Girls)">National U15 (Girls)</option>
+          <option value="U17 (Girls)">National U17 (Girls)</option>
         </select>
       </div>
     
