--- a/calculator.html
+++ b/calculator.html
@@ -46,6 +46,8 @@
         <option>All</option>
         <option>U15 (Boys)</option>
         <option>U17 (Boys)</option>
+        <option>U15 (Girls)</option>
+        <option>U17 (Girls)</option>
       </select>
 
       <label>Year:</label>
