--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Sub-nav with dropdown -->
   <div class="sub-nav">
-    <button class="subnav-toggle" onclick="toggleSubnav()">☰ Menu</button>
+    <button class="subnav-toggle" onclick="toggleSubnav()">☰</button>
     <div class="subnav-links">
       <a href="index.html">Home</a>
       <a href="historical.html">Historical Stats</a>
