--- a/calculator.html
+++ b/calculator.html
@@ -26,6 +26,7 @@
     <a href="index.html">Home</a>
     <a href="historical.html">Historical Stats</a>
     <a href="calculator.html">Advanced Calculator</a>
+    <a href="player.html">Player Analysis</a>
     <div class="dropdown">
       <a href="#" class="dropbtn">Competition ▼</a>
       <div class="dropdown-content">
