--- a/player.html
+++ b/player.html
@@ -8,6 +8,36 @@
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
+  <!-- nav bar -->
+  <div class="top-nav">
+    <div class="left-section">
+      <a href="https://maba.web.geniussports.com/" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
+      <span>FIBA</span>
+    </div>
+    <div class="right-section">
+      <span>Listen</span>
+      <span>Search 🔍</span>
+      <span>👤</span>
+    </div>
+  </div>
+  
+  <!-- Sub-nav with dropdown -->
+  <div class="sub-nav">
+    <a href="index.html">Home</a>
+    <a href="historical.html">Historical Stats</a>
+    <a href="calculator.html">Advanced Calculator</a>
+    <a href="player.html">Player Analysis</a>
+    <div class="dropdown">
+      <a href="#" class="dropbtn">Competition ▼</a>
+      <div class="dropdown-content">
+        <a href="#">MABA Cup</a>
+        <a href="#">National U17</a>
+        <a href="#">National U15</a>
+        <a href="#">Agong Cup</a>
+      </div>
+    </div>
+  </div>
+  
   <div class="container">
     <h1>Player Stats Lookup</h1>
     <div class="search-bar">
