--- a/player.html
+++ b/player.html
@@ -49,6 +49,7 @@
       <table id="playerStatsTable">
         <thead>
           <tr>
+            <th>Player</th>
             <th>Competition</th>
             <th>Year</th>
             <th>Team</th>
