--- a/player.html
+++ b/player.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Player Analysis</title>
-  <link rel="stylesheet" href="player.css" />
+  <link rel="stylesheet" href="player_style.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
@@ -78,6 +78,6 @@
       </table>
     </div>
   </div>
-  <script src="player.js"></script>
+  <script src="player_script.js"></script>
 </body>
 </html>
