--- a/player.html
+++ b/player.html
@@ -10,7 +10,7 @@
 <body>
   <div class="top-nav">
     <div class="left‑section">
-      <a href="index.html" style="color:#333; text-decoration:none;">🏀 MABA</a>
+      <a href="index.html" style="color:#333; text-decoration:none;">MABA</a>
       <span>FIBA</span>
     </div>
     <div class="right‑section">
