--- a/player.html
+++ b/player.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device‑width, initial‑scale=1.0" />
   <title>Player Analysis</title>
   <link rel="stylesheet" href="player_style.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
