--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Basketball Stats Dashboard</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- nav bar -->
   <div class="top-nav">
     <div class="left-section">
-      <link rel="icon" href="favicon.ico" type="image/x-icon" />
-      <a href="https://maba.web.geniussports.com/" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
+      <a href="https://maba.web.geniussports.com/" target="_blank">MABA</a>
       <span>FIBA</span>
     </div>
     <div class="right-section">
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <!-- Sub-nav with dropdown -->
+  <!-- Sub-nav -->
   <div class="sub-nav">
     <a href="index.html">Home</a>
     <a href="historical.html">Historical Stats</a>
@@ -39,10 +39,13 @@
     </div>
   </div>
 
-
-  <div class="container">
-    <h1>🏀 Basketball Stats Dashboard</h1>
-    <p>Welcome! Explore basketball statistics and data-driven insights.</p>
+  <!-- Hero Section -->
+  <div class="hero">
+    <div class="hero-content">
+      <h1>🏀 Welcome to the MABA Stats Hub</h1>
+      <p>Discover, analyze, and explore player & team performance from Malaysia's top basketball tournaments.</p>
+      <a href="historical.html" class="cta-button">Explore Stats</a>
+    </div>
   </div>
 
   <script>
