--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- Hero Section -->
   <div class="hero">
     <div class="hero-content">
-      <h1>🏀 Welcome to the MABA Stats Hub</h1>
+      <h1>🏀 Basketball Stats Dashboard</h1>
       <p>Discover, analyze, and explore player & team performance from Malaysia's top basketball tournaments.</p>
       <a href="historical.html" class="cta-button">Explore Stats</a>
     </div>
