--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- nav bar -->
   <div class="top-nav">
     <div class="left-section">
-      <a href="https://maba.web.geniussports.com/" target="_blank">MABA</a>
+      <a href="https://maba.web.geniussports.com/" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
       <span>FIBA</span>
     </div>
     <div class="right-section">
