--- a/player.html
+++ b/player.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="player_style.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <!-- nav bar -->
@@ -66,8 +67,63 @@
         </tfoot>
       </table>
     </div>
+
+    <!-- Percentile Chart Section -->
+    <div id="percentileSection" style="max-width: 800px; margin: 40px auto; display: none;">
+      <h2 style="text-align: center;">Player Stat Percentiles</h2>
+      <canvas id="percentileChart"></canvas>
+    </div>
   </div>
 
   <script src="player_script.js"></script>
+  <script>
+    function showPercentiles(playerName) {
+      const ctx = document.getElementById('percentileChart').getContext('2d');
+
+      const labels = ['PTS', 'AS', 'TR', 'ST', 'BS', 'Min'];
+      const data = [88, 74, 66, 70, 62, 80]; // Replace with real percentiles
+
+      if (window.percentileChart) {
+        window.percentileChart.destroy();
+      }
+
+      window.percentileChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: labels,
+          datasets: [{
+            label: `${playerName} Percentile Rank`,
+            data: data,
+            backgroundColor: 'rgba(75, 192, 192, 0.6)',
+            borderColor: 'rgba(75, 192, 192, 1)',
+            borderWidth: 1
+          }]
+        },
+        options: {
+          responsive: true,
+          scales: {
+            y: {
+              beginAtZero: true,
+              max: 100,
+              title: {
+                display: true,
+                text: 'Percentile'
+              }
+            }
+          },
+          plugins: {
+            legend: { display: false },
+            tooltip: {
+              callbacks: {
+                label: (context) => `${context.parsed.y}%`
+              }
+            }
+          }
+        }
+      });
+
+      document.getElementById('percentileSection').style.display = 'block';
+    }
+  </script>
 </body>
 </html>
