--- a/player.html
+++ b/player.html
@@ -77,7 +77,6 @@
 
   <script>
   let originalData = [];
-  let dataReady = false;
   
   fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTdFDyDmOtmFl1uhz2ZJkhb0rb6BjWabVdhvrwn6DZ9DRAhEdwKhvkZ_dGQVwBrs1qrTtJQiHf-JEyU/pub?output=csv')
     .then(r => r.text())
@@ -96,58 +95,33 @@
         st: +r.ST || 0,
         bs: +r.BS || 0
       }));
-      dataReady = true;
     });
   
-  function showPercentiles(playerName, stats) {
-    const canvas = document.getElementById('percentileChart');
-    if (!canvas) {
-      alert("Canvas not found.");
-      return;
-    }
-    const ctx = canvas.getContext('2d');
+  function showSuggestions() {
+    const input = document.getElementById('searchPlayer').value.toLowerCase();
+    const suggestionsDiv = document.getElementById('suggestions');
+    suggestionsDiv.innerHTML = '';
   
-    const values = [stats.PTS, stats.AS, stats.TR, stats.ST, stats.BS, stats.Min];
-    const labels = ['PTS', 'AS', 'TR', 'ST', 'BS', 'Min'];
+    if (input.length === 0) return;
   
-    if (window.percentileChart) {
-      window.percentileChart.destroy();
-    }
+    const players = [...new Set(originalData.map(r => r.player))];
+    const matches = players.filter(name => name.toLowerCase().includes(input));
   
-    window.percentileChart = new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels,
-        datasets: [{
-          label: `${playerName} (Avg Per Game)`,
-          data: values,
-          backgroundColor: 'rgba(54, 162, 235, 0.6)',
-          borderColor: 'rgba(54, 162, 235, 1)',
-          borderWidth: 1
-        }]
-      },
-      options: {
-        responsive: true,
-        scales: {
-          y: {
-            beginAtZero: true,
-            max: Math.max(...values) + 5
-          }
-        }
-      }
+    matches.forEach(name => {
+      const div = document.createElement('div');
+      div.textContent = name;
+      div.onclick = () => {
+        document.getElementById('searchPlayer').value = name;
+        suggestionsDiv.innerHTML = '';
+        searchPlayer();
+      };
+      suggestionsDiv.appendChild(div);
     });
-  
-    document.getElementById('percentileSection').style.display = 'block';
   }
   
   function searchPlayer() {
-    if (!dataReady) {
-      alert("Data not loaded yet. Please try again.");
-      return;
-    }
-  
-    const name = document.getElementById('searchPlayer').value.trim().toLowerCase();
-    const filtered = originalData.filter(r => r.player.toLowerCase() === name);
+    const nameInput = document.getElementById('searchPlayer').value.trim().toLowerCase();
+    const filtered = originalData.filter(r => r.player.toLowerCase() === nameInput);
   
     if (filtered.length === 0) {
       document.getElementById('tableContainer').style.display = 'none';
@@ -176,13 +150,14 @@
           <td>${r.bs}</td>
         </tr>
       `;
-      totals.gp += r.gp;
-      totals.min += r.min;
-      totals.pts += r.pts;
-      totals.as += r.as;
-      totals.tr += r.tr;
-      totals.st += r.st;
-      totals.bs += r.bs;
+  
+      totals.gp += Number(r.gp);
+      totals.min += Number(r.min);
+      totals.pts += Number(r.pts);
+      totals.as += Number(r.as);
+      totals.tr += Number(r.tr);
+      totals.st += Number(r.st);
+      totals.bs += Number(r.bs);
     });
   
     document.getElementById('tot-gp').textContent = totals.gp;
@@ -195,6 +170,7 @@
   
     document.getElementById('tableContainer').style.display = 'block';
   
+    // Only generate chart if there are games
     if (totals.gp > 0) {
       const avgStats = {
         PTS: totals.pts / totals.gp,
@@ -206,6 +182,61 @@
       };
       showPercentiles(filtered[0].player, avgStats);
     }
+  }
+  
+  function showPercentiles(playerName, stats) {
+    console.log('showPercentiles called with:', playerName, stats);
+  
+    const canvas = document.getElementById('percentileChart');
+    if (!canvas) {
+      console.error('Canvas element not found');
+      return;
+    }
+  
+    const ctx = canvas.getContext('2d');
+    if (!ctx) {
+      console.error('Unable to get canvas context');
+      return;
+    }
+  
+    const labels = ['PTS', 'AS', 'TR', 'ST', 'BS', 'Min'];
+    const values = [stats.PTS, stats.AS, stats.TR, stats.ST, stats.BS, stats.Min];
+    console.log('Chart values:', values);
+  
+    if (window.percentileChart) {
+      window.percentileChart.destroy();
+    }
+  
+    window.percentileChart = new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: labels,
+        datasets: [{
+          label: `${playerName} (Avg Per Game)`,
+          data: values,
+          backgroundColor: 'rgba(75, 192, 192, 0.6)',
+          borderColor: 'rgba(75, 192, 192, 1)',
+          borderWidth: 1
+        }]
+      },
+      options: {
+        responsive: true,
+        scales: {
+          y: {
+            beginAtZero: true,
+            title: {
+              display: true,
+              text: 'Avg Per Game'
+            }
+          }
+        },
+        plugins: {
+          legend: { display: false }
+        }
+      }
+    });
+  
+    document.getElementById('percentileSection').style.display = 'block';
   }
   </script>
 </body>
