--- a/player.html
+++ b/player.html
@@ -73,6 +73,11 @@
       <h2 style="text-align: center;">Player Stat Percentiles</h2>
       <canvas id="percentileChart"></canvas>
     </div>
+
+    <div class="container">
+      <h1>Chart.js Test: Player Performance</h1>
+      <canvas id="testChart"></canvas>
+    </div>
   </div>
 
   <script src="player_script.js"></script>
