--- a/player.html
+++ b/player.html
@@ -80,7 +80,6 @@
     <canvas id="testChart"></canvas>
   </div>
 
-<script scr=
-</script>
+<script src="historical_script.js"></script>
 </body>
 </html>
