--- a/player.html
+++ b/player.html
@@ -80,6 +80,6 @@
     <canvas id="testChart"></canvas>
   </div>
 
-<script src="historical_script.js"></script>
+<script src="player_script.js"></script>
 </body>
 </html>
