--- a/player.html
+++ b/player.html
@@ -75,6 +75,7 @@
     </div>
   </div>
 
-<script src="player_script.js"></script>
+  <script src="player_script.js"></script>
+  <script src="player_data_script.js"></script>
 </body>
 </html>
