--- a/player.html
+++ b/player.html
@@ -73,6 +73,11 @@
       <h2 style="text-align: center;">Player Stat Percentiles</h2>
       <canvas id="percentileChart"></canvas>
     </div>
+
+    <div id="ogiveSection" style="max-width: 800px; margin: 40px auto; display: none;">
+      <h2 style="text-align: center;">Player Comparison (Ogive)</h2>
+      <canvas id="ogiveChart"></canvas>
+    </div>
   </div>
 
   <script src="player_script.js"></script>
