--- a/player.html
+++ b/player.html
@@ -88,7 +88,9 @@
 
     <div id="ogiveSection" style="max-width: 800px; margin: 40px auto; display: none;">
       <h2 style="text-align: center;">Player Comparison (Ogive)</h2>
-      <canvas id="ogiveChart"></canvas>
+      <div class="chart-wrapper">
+        <canvas id="ogiveChart"></canvas>
+      </div>
     </div>
   </div>
 
