--- a/calculator.html
+++ b/calculator.html
@@ -42,21 +42,25 @@
     <h1>Weighted Rankings</h1>
 
     <div class="filter-bar">
-      <label>Competition:</label>
-      <select id="competitionSelect" multiple size="3">
-        <option>All</option>
-        <option>U15 (Boys)</option>
-        <option>U17 (Boys)</option>
-        <option>U15 (Girls)</option>
-        <option>U17 (Girls)</option>
-      </select>
-
-      <label>Year:</label>
-      <select id="yearSelect" multiple size="3">
-        <option>All</option>
-        <option>2024</option>
-        <option>2025</option>
-      </select>
+      <div class="filter-field">
+        <label for="competitionSelect">Competition</label>
+        <select id="competitionSelect" aria-label="Select competition">
+          <option value="All">All</option>
+          <option value="U15 (Boys)">National U15 (Boys)</option>
+          <option value="U17 (Boys)">National U17 (Boys)</option>
+          <option value="U15 (Girls)">National U15 (Girls)</option>
+          <option value="U17 (Girls)">National U17 (Girls)</option>
+        </select>
+      </div>
+    
+      <div class="filter-field">
+        <label for="yearSelect">Year</label>
+        <select id="yearSelect" aria-label="Select year">
+          <option value="All">All</option>
+          <option value="2024">2024</option>
+          <option value="2025">2025</option>
+        </select>
+      </div>
     </div>
 
     <div class="name-input">
