--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <a href="https://maba.web.geniussports.com/" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
       <span>FIBA</span>
     </div>
-    <div class="right-section">
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    <div class="right-section nav-links">
       <span>Listen</span>
       <span>Search 🔍</span>
       <span>👤</span>
@@ -23,7 +24,7 @@
   </div>
 
   <!-- Sub-nav -->
-  <div class="sub-nav">
+  <div class="sub-nav nav-links">
     <a href="index.html">Home</a>
     <a href="historical.html">Historical Stats</a>
     <a href="calculator.html">Advanced Calculator</a>
@@ -56,3 +57,4 @@
   </script>
 </body>
 </html>
+
