--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="https://maba.web.geniussports.com/" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
       <span>FIBA</span>
     </div>
-    <div class="right-section nav-links">
+    <div class="right-section">
       <span>Listen</span>
       <span>Search 🔍</span>
       <span>👤</span>
@@ -57,5 +57,6 @@
   </script>
 </body>
 </html>
+
 
 
