--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
   </div>
 
   <script>
-    function toggleSubnav() {
-      const nav = document.querySelector('.subnav-links');
-      nav.classList.toggle('open');
+    function toggleMenu() {
+      document.querySelector('.nav-links').classList.toggle('open');
     }
   </script>
 </body>
 </html>
+
 
 
 
