--- a/boxscore_upload.html
+++ b/boxscore_upload.html
@@ -18,7 +18,7 @@
       e.preventDefault();
       const formData = new FormData(e.target);
 
-      const response = await fetch("https://masbasketballstats-com.onrender.com/", {
+      const response = await fetch("https://masbasketballstats-com.onrender.com/scan", {
         method: "POST",
         body: formData
       });
