--- a/boxscore_upload.html
+++ b/boxscore_upload.html
@@ -18,13 +18,18 @@
       e.preventDefault();
       const formData = new FormData(e.target);
 
-      const response = await fetch("https://masbasketballstats-com.onrender.com/scan", {
-        method: "POST",
-        body: formData
-      });
-      const result = await response.json();
-      document.getElementById("output").textContent = JSON.stringify(result, null, 2);
-    };
+      try {
+        const response = await fetch("https://masbasketballstats-com.onrender.com/scan", {
+          method: "POST",
+          body: formData
+        });
+        const result = await response.json();
+        document.getElementById("output").textContent = JSON.stringify(result, null, 2);
+      } catch (err) {
+        console.error("Upload failed", err);
+        document.getElementById("output").textContent = "❌ Upload failed: " + err;
+      }
+    }
   </script>
 </body>
 </html>
