--- a/boxscore_upload.html
+++ b/boxscore_upload.html
@@ -13,23 +13,32 @@
 
   <pre id="output"></pre>
 
-  <script>
-    document.getElementById("uploadForm").onsubmit = async (e) => {
-      e.preventDefault();
-      const formData = new FormData(e.target);
+<script>
+document.getElementById("uploadForm").onsubmit = async (e) => {
+  e.preventDefault();
 
-      try {
-        const response = await fetch("https://masbasketballstats-com.onrender.com/scan", {
-          method: "POST",
-          body: formData
-        });
-        const result = await response.json();
-        document.getElementById("output").textContent = JSON.stringify(result, null, 2);
-      } catch (err) {
-        console.error("Upload failed", err);
-        document.getElementById("output").textContent = "❌ Upload failed: " + err;
-      }
+  const fileInput = document.getElementById("pdfFile");
+  const formData = new FormData();
+  formData.append("file", fileInput.files[0]);
+
+  try {
+    const response = await fetch("https://masbasketballstats-com.onrender.com/scan", {
+      method: "POST",
+      body: formData,
+    });
+
+    if (!response.ok) {
+      throw new Error("HTTP " + response.status);
     }
-  </script>
+
+    const result = await response.json();
+    console.log(result);
+    alert("Upload success!");
+  } catch (err) {
+    console.error(err);
+    alert("Upload failed: " + err);
+  }
+};
+</script>
 </body>
 </html>
