--- a/boxscore_upload.html
+++ b/boxscore_upload.html
@@ -13,32 +13,47 @@
 
   <pre id="output"></pre>
 
-<script>
-document.getElementById("uploadForm").onsubmit = async (e) => {
-  e.preventDefault();
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Upload PDF</title>
+</head>
+<body>
+  <h2>Upload Boxscore PDF</h2>
+  
+  <form id="uploadForm">
+    <input type="file" id="pdfFile" accept="application/pdf" required />
+    <button type="submit">Upload</button>
+  </form>
 
-  const fileInput = document.getElementById("pdfFile");
-  const formData = new FormData();
-  formData.append("file", fileInput.files[0]);
+  <pre id="output"></pre>
 
-  try {
-    const response = await fetch("https://masbasketballstats-com.onrender.com/scan", {
-      method: "POST",
-      body: formData,
-    });
+  <script>
+    document.getElementById("uploadForm").onsubmit = async function(e) {
+      e.preventDefault();
 
-    if (!response.ok) {
-      throw new Error("HTTP " + response.status);
-    }
+      const fileInput = document.getElementById("pdfFile"); // 👈 must match input id
+      if (!fileInput || fileInput.files.length === 0) {
+        alert("Please select a PDF file.");
+        return;
+      }
 
-    const result = await response.json();
-    console.log(result);
-    alert("Upload success!");
-  } catch (err) {
-    console.error(err);
-    alert("Upload failed: " + err);
-  }
-};
-</script>
+      const formData = new FormData();
+      formData.append("file", fileInput.files[0]);
+
+      try {
+        const response = await fetch("https://masbasketballstats-com.onrender.com/scan", {
+          method: "POST",
+          body: formData
+        });
+
+        const result = await response.json();
+        document.getElementById("output").textContent = JSON.stringify(result, null, 2);
+      } catch (err) {
+        document.getElementById("output").textContent = "Upload failed: " + err;
+      }
+    };
+  </script>
 </body>
 </html>
