--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="top-nav">
     <div class="left-section">
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-      <a href="https://maba.web.geniussports.com/" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
+      <a href="https://malaysiabasketball.com/" target="_blank" style="color: #333; text-decoration: none;">MABA</a>
       <span>FIBA</span>
     </div>
     <div class="right-section">
@@ -56,6 +56,7 @@
   </script>
 </body>
 </html>
+
 
 
 
